Upgadre to Eclipse 2021-09 and Java 11.
Signed-off-by: Stéphane Galland <galland@arakhne.org>