@@ -15,11 +15,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.sun</groupId>
-			<artifactId>tools</artifactId>
-			<version>${sarl-dsl.min.jdk.version}</version>
-			<scope>system</scope>
-			<systemPath>${tools.jar}</systemPath>
+			<groupId>io.sarl.maven</groupId>
+			<artifactId>io.sarl.maven.batchcompiler</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -31,17 +28,12 @@
 			<artifactId>junit-jupiter-params</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>io.sarl.maven</groupId>
-			<artifactId>io.sarl.maven.batchcompiler</artifactId>
-			<scope>test</scope>
-		</dependency>
 		<!-- The following dependency is included in order to be sure that correct version is used
 		     due to a conflict between the base libs for SARL and maven-core -->
 		<dependency>
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
-			<classifier>no_aop</classifier>
+			<!-- <classifier>no_aop</classifier> -->
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -50,6 +42,33 @@
 	</dependencies>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+					<compilerArgs>
+						<compilerArg>--add-exports</compilerArg>
+						<compilerArg>jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED</compilerArg>
+						<compilerArg>--add-opens</compilerArg>
+						<compilerArg>jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED</compilerArg>
+						<compilerArg>--add-exports</compilerArg>
+						<compilerArg>jdk.javadoc/jdk.javadoc.internal.doclets.formats.html=ALL-UNNAMED</compilerArg>
+						<compilerArg>--add-opens</compilerArg>
+						<compilerArg>jdk.javadoc/jdk.javadoc.internal.doclets.formats.html=ALL-UNNAMED</compilerArg>
+						<compilerArg>--add-exports</compilerArg>
+						<compilerArg>jdk.javadoc/jdk.javadoc.internal.doclets.toolkit.util=ALL-UNNAMED</compilerArg>
+						<compilerArg>--add-exports</compilerArg>
+						<compilerArg>jdk.javadoc/jdk.javadoc.internal.doclets.toolkit.util.links=ALL-UNNAMED</compilerArg>
+						<compilerArg>--add-exports</compilerArg>
+						<compilerArg>jdk.javadoc/jdk.javadoc.internal.doclets.formats.html.markup=ALL-UNNAMED</compilerArg>
+						<compilerArg>--add-exports</compilerArg>
+						<compilerArg>jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</compilerArg>
+						<compilerArg>--add-opens</compilerArg>
+						<compilerArg>java.base/java.lang.reflect=ALL-UNNAMED</compilerArg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
@@ -65,56 +84,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>javadoc-default-profile</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-				<file>
-					<exists>${java.home}/../lib/tools.jar</exists>
-				</file>
-			</activation>
-			<properties>
-				<tools.jar>${java.home}/../lib/tools.jar</tools.jar>
-			</properties>
-		</profile>
-		<profile>
-			<id>javadoc-default-profile-2</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<file>
-					<exists>${java.home}/lib/tools.jar</exists>
-				</file>
-			</activation>
-			<properties>
-				<tools.jar>${java.home}/lib/tools.jar</tools.jar>
-			</properties>
-		</profile>
-		<profile>
-			<id>javadoc-mac-profile</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<file>
-					<exists>${java.home}/../Classes/classes.jar</exists>
-				</file>
-			</activation>
-			<properties>
-				<tools.jar>${java.home}/../Classes/classes.jar</tools.jar>
-			</properties>
-		</profile>
-		<profile>
-			<id>javadoc-mac-profile-2</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<file>
-					<exists>${java.home}/Classes/classes.jar</exists>
-				</file>
-			</activation>
-			<properties>
-				<tools.jar>${java.home}/Classes/classes.jar</tools.jar>
-			</properties>
-		</profile>
-	</profiles>
-
 </project>
